# hmm_tracer

./: .gitignore  .gitmodules  LICENSE  README.md  alvahmm_integration_plan.md  cell_body_detection_plan.md  cropped_axon  graph_module_plan.md  hmm_axon.py  image_processing_module_plan.md  install_dev.sh  project_analysis_plan.md  project_analysis_plan_complete.md  project_development_plan.md  project_improvement_plan.md  project_structure_plan.md  refactoring_summary_plan.md  requirements.txt  setup.py
alva_machinery-0.0.6/: PKG-INFO  README.md  setup.cfg  setup.py
alva_machinery-0.0.6/alva_machinery/: __init__.py
alva_machinery-0.0.6/alva_machinery/branching/: __init__.py  aWay.py
alva_machinery-0.0.6/alva_machinery/distribution/: __init__.py  aFit.py
alva_machinery-0.0.6/alva_machinery/markov/: aChain.py
alva_machinery-0.0.6/alva_machinery/packing/: aCircle.py
alva_machinery-0.0.6/alva_machinery/tool/: aBox.py
cropped_axon_segmentation/: axons.png_
examples/: batch_processing.py  cell_body_detection.py  simple_tracing.py
hmm_tracer/: __init__.py  cli.py
hmm_tracer/cellbody/: __init__.py  connection.py  detection.py
hmm_tracer/core/: __init__.py  graph.py  preprocessing.py  tracing.py
hmm_tracer/utils/: __init__.py  image_utils.py
plans/: README.md  cell_body_detection_implementation_plan.md  cli_module_plan.md  github_setup_plan.md  integration_plan.md  plan_template.md  tracing_module_plan.md
tests/: test_cellbody.py  test_graph.py  test_integration.py  test_preprocessing.py  test_tracing.py
