[metadata]
name = alva_machinery
version = 0.0.6
author = Alvason Zhenhua Li
author_email = alvasonli@gmail.com
description = Home_made machinery for image and seq analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alvason
project_urls = 
	Bug Tracker for RRS = https://github.com/alvason/identifying_neurite_by_RRS/issues,
	Bug Tracker for Tcell = https://github.com/alvason/visualizing_Tcell_distribution/issues,
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[egg_info]
tag_build = 
tag_date = 0

